--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "vip-stylist",
   "main": "expo-router/entry",
@@ -35,6 +34,7 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react-native": "^0.539.0",
     "nativewind": "^4.1.23",
     "openai": "^5.12.2",
@@ -64,4 +64,3 @@
   "author": "",
   "license": "ISC"
 }
-
