--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "app/**/*.ts",
+    "app/**/*.tsx"
   ]
 }
 
