--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "@react-native-async-storage/async-storage": "2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
