--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
+    "chrono-node": "^2.8.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "expo": "^54.0.5",
@@ -50,8 +52,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "tailwindcss": "^3.4.17",
-    "@react-native-async-storage/async-storage": "2.2.0"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
